# mcp-gateway

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  WORKFLOW.md  config.json.example  pyproject.toml
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
config/examples/: config.example.json  config.production.json  config.with-remote.example.json
docs/: access-control-patterns.md  architecture-patterns.md  mcp-protocol-overview.md  security-patterns.md  transports.md
scripts/: run.sh
scripts/setup/: bootstrap.sh
src/mcp_gateway/: __init__.py  __main__.py  admin.py  audit.py  auth.py  backends.py  circuit_breaker.py  cli.py  config.py  exceptions.py  hot_reload.py  lockfile.py  logging_config.py  main.py  metrics.py  rate_limiter.py  supervisor.py  tracing.py
src/mcp_gateway/access_control/: __init__.py  manager.py  models.py  patterns.py  utils.py
src/mcp_gateway/server/: __init__.py  http_routes.py  mcp_handlers.py  middleware.py  models.py  server.py  state.py
src/mcp_gateway/services/: __init__.py  audit_service.py  config_approval_service.py  path_security_service.py
src/mcp_gateway/templates/: admin.html  blue-box.html  dashboard.html  logs.html  retro-admin.html  retro-dashboard.html
tests/: __init__.py  conftest.py  test_access_control.py  test_admin.py  test_admin_args_bug.py  test_admin_args_bug_repro.py  test_admin_args_integration.py  test_audit_fixes.py  test_auth.py  test_backend_manager_bug.py  test_backends.py  test_benchmark.py  test_cli.py  test_config.py  test_config_change_approval.py  test_dashboard_tools.py  test_hot_reload.py  test_http_routes.py  test_integration.py  test_lockfile.py  test_main.py  test_main_module.py  test_metrics.py  test_security.py  test_server.py  test_services_architecture.py  test_supervisor.py  verify_improvements.py
tests/e2e/: __init__.py  conftest.py  test_dashboard_templates.py
tests/integration/: conftest.py  test_admin_api.py  test_config_approval.py  test_dashboard_api.py  test_hot_reload.py
tests/load/: locustfile.py
tests/manual/: test_simple.py
